--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "react_rails",
   "private": true,
-  "dependencies": {},
-  "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
+  "scripts": {
+    "dev": "webpack --mode development --module-bind 'js=babel-loader'"
+  },
+  "dependencies": {
     "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "babel-loader": "^8.0.0-beta.2",
     "webpack": "^4.4.1",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "webpack-cli": "^2.0.13"
   }
 }
