--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "react_rails",
   "private": true,
   "scripts": {
-    "dev": "webpack --mode development --module-bind 'js=babel-loader'"
+    "start": "webpack-dev-server --mode development --output '[name].js'",
+    "clean": "rimraf public/dist",
+    "build:production": "webpack --mode production",
+    "build": "npm-run-all clean build:production"
   },
   "dependencies": {
+    "npm-run-all": "^4.1.3",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
-  },
-  "devDependencies": {
+    "react-dom": "^16.3.0",
+    "rimraf": "^2.6.2",
     "@babel/core": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   }
 }
