--- a/package.json
+++ b/package.json
@@ -8,20 +8,14 @@
     "build": "npm-run-all clean build:production"
   },
   "dependencies": {
-    "npm-run-all": "^4.1.3",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "rimraf": "^2.6.2",
+    "react-dom": "^16.3.0"
+  },
+  "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
-  },
-  "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -30,6 +24,12 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
-    "prettier": "^1.13.3"
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.13.3",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   }
 }
