--- a/package.json
+++ b/package.json
@@ -24,12 +24,21 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.3",
     "npm-run-all": "^4.1.3",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.13.3",
     "rimraf": "^2.6.2",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-manifest-plugin": "^2.0.0-rc.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslist --fix src/*",
+      "git add"
+    ]
   }
 }
