--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --output '[name].js'",
     "clean": "rimraf public/dist",
-    "build:production": "webpack --mode production",
+    "build:production": "cross-env NODE_ENV=production webpack --mode production",
     "build": "npm-run-all clean build:production"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
+    "cross-env": "^5.1.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
