--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "build": "npm-run-all clean build:production"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.9",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.5",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.7",
