--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-client": "^2.3.4",
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
+    "css-loader": "^0.28.11",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
@@ -44,9 +45,13 @@
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.11.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
