--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "build": "npm-run-all clean build:production"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.9",
-    "apollo-cache-inmemory": "^1.2.4",
-    "apollo-client": "^2.3.4",
+    "apollo-boost": "^0.1.10",
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "css-loader": "^0.28.11",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-apollo": "^2.1.5",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.6",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -30,32 +30,32 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.0.0-beta.51",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.0-beta.2",
-    "cross-env": "^5.1.4",
+    "babel-loader": "^8.0.0-beta.4",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-react": "^7.9.1",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^7.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.11.1",
+    "prettier": "^1.13.5",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.2.0",
+    "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-manifest-plugin": "^2.0.3"
   },
   "lint-staged": {
     "*.{js,jsx}": [
