--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
+    "hoek": "^5.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.6",
