--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "history": "^4.7.2",
     "hoek": "^5.0.3",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.6",
