--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-apollo": "^2.1.6",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
