本番環境のDBの設定を環境変数からできるようにした

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,7 @@ test:
 
 production:
   <<: *default
-  database: react_rails
-  username: root
-  password: <%= ENV['REACT_RAILS_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
